vlib/v/parser/tests/struct_embed_wrong_pos_long_err.vv
import cli
struct Foo2 {
mut:
	cli.Command
}
fn main() {}